Added dictionary config

--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -1,1 +1,6 @@
 HELLO_MESSAGE = Hello
+LOGIN_SUCCESS=Successfully logged in
+LOGIN_PROCESS=Enter your login and password through the space (first login) :
+TABLE_BOOKED=You booked a table
+TENNIS_ID_INVALID=Invalid tennis ID
+USER_ID_INVALID=Invalid user ID
