Added Heroku config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+# Profile
+spring.profiles.active=heroku
+
 # Url
-url.server=https://a4baf3b5.ngrok.io
+url.server=https://f54027f4.ngrok.io
 url.webhook=/webhook
 url.telegramUrls=COMMON,https://api.telegram.org/bot879058246:AAFG1JRCGDd_YHrKdjNt69GPBvDF-OqMCYU
 
@@ -21,3 +24,4 @@ url.tennis.bookingUrl=http://zaplvlad.com/table/booktable
 url.tennis.showTableUrl=http://zaplvlad.com/table/gettablemodel?id=1
 url.tennis.getProfileUrl=http://zaplvlad.com/account/getprofile
 url.tennis.acceptInvitationUrl=http://zaplvlad.com/table/accepttableinvite
+url.tennis.cancelGameUrl=http://zaplvlad.com/table/removegame
