--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -4,3 +4,4 @@ LOGIN_PROCESS=Enter your login and password through the space (first login) :
 TABLE_BOOKED=You booked a table
 TENNIS_ID_INVALID=Invalid tennis ID
 USER_ID_INVALID=Invalid user ID
+GAME_CANCELLED=The game has been cancelled
