--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -5,3 +5,4 @@ TABLE_BOOKED=You booked a table
 TENNIS_ID_INVALID=Invalid tennis ID
 USER_ID_INVALID=Invalid user ID
 GAME_CANCELLED=The game has been cancelled
+GAME_STARTED=Your game is started!
