--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -6,3 +6,4 @@ TENNIS_ID_INVALID=Invalid tennis ID
 USER_ID_INVALID=Invalid user ID
 GAME_CANCELLED=The game has been cancelled
 GAME_STARTED=Your game is started!
+ORDER_MESSAGE=Order %s , Now players are playing : %s minutes
