--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -5,5 +5,6 @@ TABLE_BOOKED=You booked a table
 TENNIS_ID_INVALID=Invalid tennis ID
 USER_ID_INVALID=Invalid user ID
 GAME_CANCELLED=The game has been cancelled
-GAME_STARTED=Your game is started!
+GAME_STARTED=Your game is accepted by me!
 ORDER_MESSAGE=Order %s , Now players are playing : %s minutes
+TIME_TO_GO=There are no queue, time to play!
