Added exceptions, fixed queue

--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -8,3 +8,5 @@ GAME_CANCELLED=The game has been cancelled
 GAME_STARTED=Your game is accepted by me!
 ORDER_MESSAGE=Order %s , Now players are playing : %s minutes
 TIME_TO_GO=There are no queue, time to play!
+SYSTEM_ERROR=System error
+CANT_CANCEL=You can`t cancel the game for now
