--- a/src/main/resources/dictionary.properties
+++ b/src/main/resources/dictionary.properties
@@ -6,7 +6,7 @@ TENNIS_ID_INVALID=Invalid tennis ID
 USER_ID_INVALID=Invalid user ID
 GAME_CANCELLED=The game has been cancelled
 GAME_STARTED=Your game is accepted by me!
-ORDER_MESSAGE=Order %s , Now players are playing : %s minutes
+ORDER_MESSAGE=Order %s , Now players (%s) are playing : %s minutes
 TIME_TO_GO=There are no queue, time to play!
 SYSTEM_ERROR=System error
 CANT_CANCEL=You can`t cancel the game for now
